<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tasc_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="u0177383@todo.todo">u0177383</maintainer>
  <license>TODO: License declaration</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>std_srvs</depend>
  <depend>control_msgs</depend>
  <depend>joy</depend>
  <depend>realsense2_camera</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>sensor_msgs_py</depend>
  
  <!-- Python dependencies for WebSocket server -->
  <exec_depend>python3-websockets</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-scipy</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
